--- a/paskaitu_failai/Flask_web/pask16_uzd/templates/base.html
+++ b/paskaitu_failai/Flask_web/pask16_uzd/templates/base.html
@@ -11,9 +11,13 @@
     <div class="container">
         <header class="d-flex justify-content-center py-3">
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="login" class="nav-link">Login</a></li>
-            <li class="nav-item"><a href="vardai" class="nav-link">Vardai</a></li>
+
+            <li class="nav-item"><a href="/" class="nav-link">main</a></li>
+            <li class="nav-item"><a href="login" class="nav-link">Zodisx5</a></li>
+            <li class="nav-item"><a href="ar_keliamieji" class="nav-link">ar_keliamieji</a></li>
+            <li class="nav-item"><a href="keliamieji" class="nav-link">visi_keliamieji</a></li>
+            
+          
             
             
           </ul>
