--- a/paskaitu_failai/zFlask_db/templates/masinos/create.html
+++ b/paskaitu_failai/zFlask_db/templates/masinos/create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Sukurti Mašiną</h1>
+<h1>Sukurti Mašiną.</h1>
 
 <form action="/masinos/create" method="post">
     <div class="mb-3">
