--- a/paskaitu_failai/zFlask_db/templates/vartotojai/create.html
+++ b/paskaitu_failai/zFlask_db/templates/vartotojai/create.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1></h1>
+<h1>Sukurti naują vartotoją.</h1>
 
 <form action="/vartotojai/create" method="post">
 
     <div class="mb-3">
-        <label for="vardas" class="form-label">Vardas</label>
+        <label for="vardas" class="form-label">Įveskite vardą:</label>
         <input type="text" class="form-control" id="vardas" name="vardas">
     </div>
     <!-- <div class="mb-3">
