--- a/paskaitu_failai/zFlask_db/templates/vartotojai/delete.html
+++ b/paskaitu_failai/zFlask_db/templates/vartotojai/delete.html
@@ -5,11 +5,10 @@
 
 <p>Id: {{vartotojas.id}}</p>
 <p>Name: {{vartotojas.name}}</p>
-<p>Age: {{vartotojas.age}}</p>
 
 <div class="row">
     <div class="col-2">
-        <a class="btn btn-primary" href="/vartotojai" role="button">Gryžti</a>
+        <a class="btn btn-primary" href="/vartotojai" role="button">Grįžti</a>
     </div>
 
     <form action="/vartotojai/delete/{{vartotojas.id}}" method="post" class="col-2">
